// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRange renders 1`] = `
<div>
  <div
    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu default__urM rounding4__ho- shadow__ALa xsDisplayInlineBlock__FNs"
    style="min-height: 425px;"
  >
    <div
      class="Flex__un8 rowGap0__C9i columnGap0__TB_ xsDirectionRow__hs0"
    >
      <div
        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
      >
        <div
          class="Flex__un8 rowGap0__C9i columnGap0__TB_ justifyCenter__mQ8 xsDirectionColumn__jzS xsItemsStart__qF5"
        >
          <div
            class="dateFieldSection"
          >
            <div
              class="Flex__un8 rowGap3__LKv columnGap3__U1N xsDirectionRow__hs0"
            >
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  style="width: 280px;"
                >
                  <div
                    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  >
                    <div
                      class="box__zI7 accessibilityOutline__iyn borderBox__Hsu relative__XiG xsDisplayFlex__Jea xsItemsCenter__KS5"
                    >
                      <div
                        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexGrow__ujU relative__XiG rounding4__ho- xsDisplayFlex__Jea"
                      >
                        <input
                          autocomplete="off"
                          class="textField formElementBase typographyTruncate actionButton layoutLarge formElementEnabled formElementNormal"
                          enterkeyhint="enter"
                          id="datefield-start-:r0:"
                          inputmode="numeric"
                          placeholder="MM / DD / YYYY"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu xsDisplayFlex__Jea xsItemsCenter__KS5"
                  style="height: 100%;"
                >
                  <div
                    class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ defaultText__O2T alignStart__zDA breakWord__IZT fontWeightNormal__swG"
                  >
                    —
                  </div>
                </div>
              </div>
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  style="width: 280px;"
                >
                  <div
                    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  >
                    <div
                      class="box__zI7 accessibilityOutline__iyn borderBox__Hsu relative__XiG xsDisplayFlex__Jea xsItemsCenter__KS5"
                    >
                      <div
                        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexGrow__ujU relative__XiG rounding4__ho- xsDisplayFlex__Jea"
                      >
                        <input
                          autocomplete="off"
                          class="textField formElementBase typographyTruncate actionButton layoutLarge formElementEnabled formElementNormal"
                          enterkeyhint="enter"
                          id="datefield-end-:r0:"
                          inputmode="numeric"
                          placeholder="MM / DD / YYYY"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
            style="width: 629px;"
          >
            <div
              class="_gestalt"
            >
              <div
                class="_gestalt_daterange"
              >
                <div>
                  <div
                    class="react-datepicker react-datepicker-inline"
                  >
                    <div
                      class="react-datepicker__triangle"
                    />
                    <button
                      aria-label="Previous Month"
                      class="react-datepicker__navigation react-datepicker__navigation--previous"
                      type="button"
                    >
                      <span
                        class="react-datepicker__navigation-icon react-datepicker__navigation-icon--previous"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label=""
                          class="rtlSupport__Hn_ icon__gUZ defaultIcon__R19 iconBlock__U9O block__kVc"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            d="M17.28 24c-.57 0-1.14-.22-1.58-.66L4.5 12 15.7.66a2.21 2.21 0 0 1 3.15 0c.87.88.87 2.3 0 3.18L10.79 12l8.06 8.16c.87.88.87 2.3 0 3.18-.44.44-1 .66-1.57.66"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      aria-label="Next Month"
                      class="react-datepicker__navigation react-datepicker__navigation--next"
                      type="button"
                    >
                      <span
                        class="react-datepicker__navigation-icon react-datepicker__navigation-icon--next"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label=""
                          class="rtlSupport__Hn_ icon__gUZ defaultIcon__R19 iconBlock__U9O block__kVc"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            d="M6.72 24c.57 0 1.14-.22 1.57-.66L19.5 12 8.29.66c-.86-.88-2.27-.88-3.14 0-.87.88-.87 2.3 0 3.18L13.21 12l-8.06 8.16c-.87.88-.87 2.3 0 3.18.43.44 1 .66 1.57.66"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      class="react-datepicker__month-container"
                    >
                      <div
                        class="react-datepicker__header "
                      >
                        <div
                          class="react-datepicker__current-month"
                        >
                          July 2023
                        </div>
                        <div
                          class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
                        />
                        <div
                          class="react-datepicker__day-names"
                        >
                          <div
                            class="react-datepicker__day-name"
                          >
                            Su
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Mo
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Tu
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            We
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Th
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Fr
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Sa
                          </div>
                        </div>
                      </div>
                      <div
                        aria-label="month  2023-07"
                        class="react-datepicker__month"
                      >
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, June 25th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--025 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            25
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, June 26th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--026 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            26
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, June 27th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--027 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            27
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, June 28th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--028 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            28
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, June 29th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--029 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            29
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, June 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            30
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            1
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            2
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 3rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--003"
                            role="button"
                            tabindex="-1"
                          >
                            3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 4th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--004"
                            role="button"
                            tabindex="-1"
                          >
                            4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 5th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--005"
                            role="button"
                            tabindex="-1"
                          >
                            5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 6th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--006"
                            role="button"
                            tabindex="-1"
                          >
                            6
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 7th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--007"
                            role="button"
                            tabindex="-1"
                          >
                            7
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 8th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--008 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            8
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 9th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--009 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            9
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 10th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--010"
                            role="button"
                            tabindex="-1"
                          >
                            10
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 11th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--011"
                            role="button"
                            tabindex="-1"
                          >
                            11
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 12th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--012"
                            role="button"
                            tabindex="-1"
                          >
                            12
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 13th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--013"
                            role="button"
                            tabindex="-1"
                          >
                            13
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 14th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--014"
                            role="button"
                            tabindex="-1"
                          >
                            14
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 15th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--015 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            15
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 16th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--016 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            16
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 17th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--017"
                            role="button"
                            tabindex="-1"
                          >
                            17
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 18th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--018 react-datepicker__day--keyboard-selected react-datepicker__day--today"
                            role="button"
                            tabindex="0"
                          >
                            18
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 19th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--019"
                            role="button"
                            tabindex="-1"
                          >
                            19
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 20th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--020"
                            role="button"
                            tabindex="-1"
                          >
                            20
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 21st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--021"
                            role="button"
                            tabindex="-1"
                          >
                            21
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 22nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--022 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            22
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 23rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--023 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            23
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 24th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--024"
                            role="button"
                            tabindex="-1"
                          >
                            24
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 25th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--025"
                            role="button"
                            tabindex="-1"
                          >
                            25
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 26th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--026"
                            role="button"
                            tabindex="-1"
                          >
                            26
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 27th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--027"
                            role="button"
                            tabindex="-1"
                          >
                            27
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 28th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--028"
                            role="button"
                            tabindex="-1"
                          >
                            28
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 29th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--029 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            29
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            30
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 31st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--031"
                            role="button"
                            tabindex="-1"
                          >
                            31
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 3rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--003 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 4th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--004 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 5th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--005 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="react-datepicker__month-container"
                    >
                      <div
                        class="react-datepicker__header "
                      >
                        <div
                          class="react-datepicker__current-month"
                        >
                          August 2023
                        </div>
                        <div
                          class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
                        />
                        <div
                          class="react-datepicker__day-names"
                        >
                          <div
                            class="react-datepicker__day-name"
                          >
                            Su
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Mo
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Tu
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            We
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Th
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Fr
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Sa
                          </div>
                        </div>
                      </div>
                      <div
                        aria-label="month  2023-08"
                        class="react-datepicker__month"
                      >
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 31st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--031 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          />
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001"
                            role="button"
                            tabindex="-1"
                          >
                            1
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002"
                            role="button"
                            tabindex="-1"
                          >
                            2
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 3rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--003"
                            role="button"
                            tabindex="-1"
                          >
                            3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 4th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--004"
                            role="button"
                            tabindex="-1"
                          >
                            4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 5th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--005 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            5
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, August 6th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--006 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            6
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, August 7th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--007"
                            role="button"
                            tabindex="-1"
                          >
                            7
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 8th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--008"
                            role="button"
                            tabindex="-1"
                          >
                            8
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 9th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--009"
                            role="button"
                            tabindex="-1"
                          >
                            9
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 10th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--010"
                            role="button"
                            tabindex="-1"
                          >
                            10
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 11th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--011"
                            role="button"
                            tabindex="-1"
                          >
                            11
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 12th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--012 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            12
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, August 13th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--013 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            13
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, August 14th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--014"
                            role="button"
                            tabindex="-1"
                          >
                            14
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 15th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--015"
                            role="button"
                            tabindex="-1"
                          >
                            15
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 16th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--016"
                            role="button"
                            tabindex="-1"
                          >
                            16
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 17th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--017"
                            role="button"
                            tabindex="-1"
                          >
                            17
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 18th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--018"
                            role="button"
                            tabindex="-1"
                          >
                            18
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 19th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--019 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            19
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, August 20th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--020 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            20
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, August 21st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--021"
                            role="button"
                            tabindex="-1"
                          >
                            21
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 22nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--022"
                            role="button"
                            tabindex="-1"
                          >
                            22
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 23rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--023"
                            role="button"
                            tabindex="-1"
                          >
                            23
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 24th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--024"
                            role="button"
                            tabindex="-1"
                          >
                            24
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 25th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--025"
                            role="button"
                            tabindex="-1"
                          >
                            25
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 26th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--026 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            26
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, August 27th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--027 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            27
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, August 28th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--028"
                            role="button"
                            tabindex="-1"
                          >
                            28
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 29th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--029"
                            role="button"
                            tabindex="-1"
                          >
                            29
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030"
                            role="button"
                            tabindex="-1"
                          >
                            30
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 31st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--031"
                            role="button"
                            tabindex="-1"
                          >
                            31
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, September 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            1
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, September 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            2
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="FlexItem__xuA selfEnd__gRy"
          >
            <div
              class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexWrap__kzZ marginBottomN1__Uex marginEndN1__k1A marginStartN1__F6l marginTopN1__XBe xsDisplayFlex__Jea"
            >
              <div
                class="box__zI7 accessibilityOutline__iyn borderBox__Hsu paddingX1__Shl paddingY1__C9q"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu marginBottom4__RDc marginEnd4__jar"
                >
                  <button
                    class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY accessibilityOutline__iyn parentButton__oRi paddingX0__lnZ paddingY0__wsz transparentBg__YbY"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY accessibilityOutline__iyn tapTransition__S9z md__Vxj medium__aZc paddingX3__Zr3 paddingY2__hA- transparent__qQ7 transparentBg__YbY enabled__hNT pointer__BG7 childrenDiv__hDj flex___O1 xsItemsCenter__KS5 justifyCenter__mQ8 fullWidth__Tbt xsCol12__L4E"
                    >
                      <div
                        class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ defaultText__O2T alignCenter__tg7 fontWeightSemiBold__H2s"
                      >
                        Cancel
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="box__zI7 accessibilityOutline__iyn borderBox__Hsu paddingX1__Shl paddingY1__C9q"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu marginBottom4__RDc marginEnd4__jar"
                >
                  <button
                    class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY parentButton__oRi paddingX0__lnZ paddingY0__wsz transparentBg__YbY"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY tapTransition__S9z md__Vxj medium__aZc paddingX3__Zr3 paddingY2__hA- disabled__OWt lightGrayBg__gpV childrenDiv__hDj flex___O1 xsItemsCenter__KS5 justifyCenter__mQ8 fullWidth__Tbt xsCol12__L4E"
                    >
                      <div
                        class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ subtleText__EdS alignCenter__tg7 fontWeightSemiBold__H2s"
                      >
                        Apply
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateRange renders in mobile devices 1`] = `
<div>
  <div
    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu default__urM rounding4__ho- shadow__ALa xsDisplayInlineBlock__FNs"
    style="min-height: 425px;"
  >
    <div
      class="Flex__un8 rowGap0__C9i columnGap0__TB_ xsDirectionRow__hs0"
    >
      <div
        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
      >
        <div
          class="Flex__un8 rowGap0__C9i columnGap0__TB_ justifyCenter__mQ8 xsDirectionColumn__jzS xsItemsStart__qF5"
        >
          <div
            class="dateFieldSection"
          >
            <div
              class="Flex__un8 rowGap3__LKv columnGap3__U1N xsDirectionRow__hs0"
            >
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  style="width: 171px;"
                >
                  <div
                    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  >
                    <div
                      class="box__zI7 accessibilityOutline__iyn borderBox__Hsu relative__XiG xsDisplayFlex__Jea xsItemsCenter__KS5"
                    >
                      <div
                        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexGrow__ujU relative__XiG rounding4__ho- xsDisplayFlex__Jea"
                      >
                        <input
                          autocomplete="off"
                          class="textField formElementBase typographyTruncate actionButton layoutLarge formElementEnabled formElementNormal"
                          enterkeyhint="enter"
                          id="datefield-start-:r3:"
                          inputmode="numeric"
                          placeholder="MM / DD / YYYY"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu xsDisplayFlex__Jea xsItemsCenter__KS5"
                  style="height: 100%;"
                >
                  <div
                    class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ defaultText__O2T alignStart__zDA breakWord__IZT fontWeightNormal__swG"
                  >
                    —
                  </div>
                </div>
              </div>
              <div
                class="FlexItem__xuA"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  style="width: 171px;"
                >
                  <div
                    class="box__zI7 accessibilityOutline__iyn borderBox__Hsu"
                  >
                    <div
                      class="box__zI7 accessibilityOutline__iyn borderBox__Hsu relative__XiG xsDisplayFlex__Jea xsItemsCenter__KS5"
                    >
                      <div
                        class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexGrow__ujU relative__XiG rounding4__ho- xsDisplayFlex__Jea"
                      >
                        <input
                          autocomplete="off"
                          class="textField formElementBase typographyTruncate actionButton layoutLarge formElementEnabled formElementNormal"
                          enterkeyhint="enter"
                          id="datefield-end-:r3:"
                          inputmode="numeric"
                          placeholder="MM / DD / YYYY"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="box__zI7 accessibilityOutline__iyn borderBox__Hsu justifyCenter__mQ8 xsDisplayFlex__Jea"
            style="width: 100%;"
          >
            <div
              class="_gestalt"
            >
              <div>
                <div>
                  <div
                    class="react-datepicker react-datepicker-inline"
                  >
                    <div
                      class="react-datepicker__triangle"
                    />
                    <button
                      aria-label="Previous Month"
                      class="react-datepicker__navigation react-datepicker__navigation--previous"
                      type="button"
                    >
                      <span
                        class="react-datepicker__navigation-icon react-datepicker__navigation-icon--previous"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label=""
                          class="rtlSupport__Hn_ icon__gUZ defaultIcon__R19 iconBlock__U9O block__kVc"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            d="M17.28 24c-.57 0-1.14-.22-1.58-.66L4.5 12 15.7.66a2.21 2.21 0 0 1 3.15 0c.87.88.87 2.3 0 3.18L10.79 12l8.06 8.16c.87.88.87 2.3 0 3.18-.44.44-1 .66-1.57.66"
                          />
                        </svg>
                      </span>
                    </button>
                    <button
                      aria-label="Next Month"
                      class="react-datepicker__navigation react-datepicker__navigation--next"
                      type="button"
                    >
                      <span
                        class="react-datepicker__navigation-icon react-datepicker__navigation-icon--next"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label=""
                          class="rtlSupport__Hn_ icon__gUZ defaultIcon__R19 iconBlock__U9O block__kVc"
                          height="16"
                          role="img"
                          viewBox="0 0 24 24"
                          width="16"
                        >
                          <path
                            d="M6.72 24c.57 0 1.14-.22 1.57-.66L19.5 12 8.29.66c-.86-.88-2.27-.88-3.14 0-.87.88-.87 2.3 0 3.18L13.21 12l-8.06 8.16c-.87.88-.87 2.3 0 3.18.43.44 1 .66 1.57.66"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      class="react-datepicker__month-container"
                    >
                      <div
                        class="react-datepicker__header "
                      >
                        <div
                          class="react-datepicker__current-month"
                        >
                          July 2023
                        </div>
                        <div
                          class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
                        />
                        <div
                          class="react-datepicker__day-names"
                        >
                          <div
                            class="react-datepicker__day-name"
                          >
                            Su
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Mo
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Tu
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            We
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Th
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Fr
                          </div>
                          <div
                            class="react-datepicker__day-name"
                          >
                            Sa
                          </div>
                        </div>
                      </div>
                      <div
                        aria-label="month  2023-07"
                        class="react-datepicker__month"
                      >
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, June 25th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--025 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            25
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, June 26th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--026 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            26
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, June 27th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--027 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            27
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, June 28th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--028 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            28
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, June 29th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--029 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            29
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, June 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            30
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            1
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            2
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 3rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--003"
                            role="button"
                            tabindex="-1"
                          >
                            3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 4th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--004"
                            role="button"
                            tabindex="-1"
                          >
                            4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 5th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--005"
                            role="button"
                            tabindex="-1"
                          >
                            5
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 6th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--006"
                            role="button"
                            tabindex="-1"
                          >
                            6
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 7th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--007"
                            role="button"
                            tabindex="-1"
                          >
                            7
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 8th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--008 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            8
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 9th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--009 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            9
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 10th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--010"
                            role="button"
                            tabindex="-1"
                          >
                            10
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 11th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--011"
                            role="button"
                            tabindex="-1"
                          >
                            11
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 12th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--012"
                            role="button"
                            tabindex="-1"
                          >
                            12
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 13th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--013"
                            role="button"
                            tabindex="-1"
                          >
                            13
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 14th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--014"
                            role="button"
                            tabindex="-1"
                          >
                            14
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 15th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--015 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            15
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 16th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--016 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            16
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 17th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--017"
                            role="button"
                            tabindex="-1"
                          >
                            17
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 18th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--018 react-datepicker__day--keyboard-selected react-datepicker__day--today"
                            role="button"
                            tabindex="0"
                          >
                            18
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 19th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--019"
                            role="button"
                            tabindex="-1"
                          >
                            19
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 20th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--020"
                            role="button"
                            tabindex="-1"
                          >
                            20
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 21st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--021"
                            role="button"
                            tabindex="-1"
                          >
                            21
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 22nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--022 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            22
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 23rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--023 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            23
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 24th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--024"
                            role="button"
                            tabindex="-1"
                          >
                            24
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, July 25th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--025"
                            role="button"
                            tabindex="-1"
                          >
                            25
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, July 26th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--026"
                            role="button"
                            tabindex="-1"
                          >
                            26
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, July 27th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--027"
                            role="button"
                            tabindex="-1"
                          >
                            27
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, July 28th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--028"
                            role="button"
                            tabindex="-1"
                          >
                            28
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, July 29th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--029 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            29
                          </div>
                        </div>
                        <div
                          class="react-datepicker__week"
                        >
                          <div
                            aria-disabled="false"
                            aria-label="Choose Sunday, July 30th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--030 react-datepicker__day--weekend"
                            role="button"
                            tabindex="-1"
                          >
                            30
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Monday, July 31st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--031"
                            role="button"
                            tabindex="-1"
                          >
                            31
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Tuesday, August 1st, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--001 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            1
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Wednesday, August 2nd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--002 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            2
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Thursday, August 3rd, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--003 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            3
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Friday, August 4th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--004 react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            4
                          </div>
                          <div
                            aria-disabled="false"
                            aria-label="Choose Saturday, August 5th, 2023"
                            class="react-datepicker__day react-datepicker__days react-datepicker__day--005 react-datepicker__day--weekend react-datepicker__day--outside-month"
                            role="button"
                            tabindex="-1"
                          >
                            5
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="FlexItem__xuA selfCenter__Z2K"
          >
            <div
              class="box__zI7 accessibilityOutline__iyn borderBox__Hsu flexWrap__kzZ marginBottomN1__Uex marginEndN1__k1A marginStartN1__F6l marginTopN1__XBe xsDisplayFlex__Jea"
            >
              <div
                class="box__zI7 accessibilityOutline__iyn borderBox__Hsu paddingX1__Shl paddingY1__C9q"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu marginBottom4__RDc marginEnd4__jar"
                >
                  <button
                    class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY accessibilityOutline__iyn parentButton__oRi paddingX0__lnZ paddingY0__wsz transparentBg__YbY"
                    tabindex="0"
                    type="button"
                  >
                    <div
                      class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY accessibilityOutline__iyn tapTransition__S9z md__Vxj medium__aZc paddingX3__Zr3 paddingY2__hA- transparent__qQ7 transparentBg__YbY enabled__hNT pointer__BG7 childrenDiv__hDj flex___O1 xsItemsCenter__KS5 justifyCenter__mQ8 fullWidth__Tbt xsCol12__L4E"
                    >
                      <div
                        class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ defaultText__O2T alignCenter__tg7 fontWeightSemiBold__H2s"
                      >
                        Cancel
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="box__zI7 accessibilityOutline__iyn borderBox__Hsu paddingX1__Shl paddingY1__C9q"
              >
                <div
                  class="box__zI7 accessibilityOutline__iyn borderBox__Hsu marginBottom4__RDc marginEnd4__jar"
                >
                  <button
                    class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY parentButton__oRi paddingX0__lnZ paddingY0__wsz transparentBg__YbY"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="button__RCK borderBox__Hsu minWidth60__USg noBorder__adn hideOutline__CCY inline__NTm inlineBlock__KhY tapTransition__S9z md__Vxj medium__aZc paddingX3__Zr3 paddingY2__hA- disabled__OWt lightGrayBg__gpV childrenDiv__hDj flex___O1 xsItemsCenter__KS5 justifyCenter__mQ8 fullWidth__Tbt xsCol12__L4E"
                    >
                      <div
                        class="Text__tBJ antialiased__dyH sansSerif__iFc fontSize300__sAJ subtleText__EdS alignCenter__tg7 fontWeightSemiBold__H2s"
                      >
                        Apply
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
